--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.6.0",
     "heroku": "^7.50.0",
+    "mdbreact": "^5.0.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^16.13.0",
