--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.6.1",
     "heroku": "^7.50.0",
-    "material-table": "^1.69.2",
+    "material-table": "^1.69.3",
     "mdbreact": "^5.0.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.5.1",
